[package]
name = "ytdl_rs"
version = "0.1.0"
authors = ["spaghetti"]
edition = "2018"
 
[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
colored = "2.0.0"
console = "0.15.0"
dirs = "4.0.0"
notify-rust = "4.5.6"
reqwest = { version = "*", features = ["json"] }
serde = { version = "1.0.136", features = ["serde_derive"] }
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
windows = "0.32.0"

[features]
 

[[bin]]
name = "ytdlrs"
path = "src/main.rs"
