[package]
name = "ytdl_rs"
version = "0.1.0"
authors = ["spaghetti"]
edition = "2021"
 
[dependencies]
cursive = "0.20.0"
dirs = "4.0.0"
notify-rust = "4.5.6"
ytdlrs_lib = { git = "https://github.com/alejandro0619/ytdlrs_lib", branch = "main"}
regex = "1.6.0"
[dev-dependencies]
windows = "0.32.0"


[[bin]]
name = "ytdlrs"
path = "src/main.rs"
